<resources>
    <string name="app_name">vamp_generator_v2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom">Nom</string>
    <string name="race">Race</string>
    <string name="nature">Nature</string>
    <string name="concept">Concept</string>
    <string name="sire">Sire</string>
    <string name="add">ADD</string>
</resources>